k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boj-server
  labels:
    app: boj-server
spec:
  selector:
    app: boj-server
  ports:
  - name: rest
    port: 7700
    targetPort: 7700
  - name: grpc
    port: 7701
    targetPort: 7701
  - name: graphql
    port: 7702
    targetPort: 7702
  - name: sse
    port: 7703
    targetPort: 7703
  type: LoadBalancer
